# cpugapminer

./: .gitignore  LICENSE.md  Makefile  Makefile.mingw  README.md  START_18000000000000000000.sh  crt_s512_m22.txt  gapcoin2026.md  pgt.md
crt/: compare_s64_p14_b10.txt  compare_s64_p14_b10_m21.txt  compare_s64_p15_b4_m22.txt  crt_s1024_m21.txt  crt_s1024_m22.txt  crt_s1024_m22_exhaust.txt  crt_s1024_m22_random.txt  crt_s110_m21.txt  crt_s110_m22.txt  crt_s128_m21.txt  crt_s128_m22.txt  crt_s128_m22_random.txt  crt_s128_m23.txt  crt_s128_m25.txt  crt_s133_m21.txt  crt_s133_m30.txt  crt_s160_m22.txt  crt_s192_m22.txt  crt_s256_m21.txt  crt_s256_m22.txt  crt_s256_m23.txt  crt_s256_m25.txt  crt_s256_m26.txt  crt_s256_m28_exhaust.txt  crt_s25_m21.txt  crt_s34_m21.txt  crt_s384_m22.txt  crt_s384_m23.txt  crt_s450_m23_phase3.txt  crt_s450_m30_phase3.txt  crt_s501_m27.txt  crt_s501_m27phase3.txt  crt_s512_m22.txt  crt_s512_m23.txt  crt_s512_m23a_phase2.txt  crt_s512_m23phase3.txt  crt_s512_m27.txt  crt_s54_m29.txt  crt_s640_m22.txt  crt_s64_m21.txt  (+23 more)
docs/: CRT_GENERATION.md  GEN_CRT_EXHAUST.md  MAXGAP_SCAN.md  sample_stride_guide.md
scripts/: README.md  bench_sample_stride.sh  bench_sieve_matrix.sh  bench_sievegap_vs_gapminerstyle.sh  find_records.py  inspect_tx.py  maxgap_ranges.py  maxgap_submission_template.py  scan_blocks.py  scan_blocks_gap2026.py  submit_records.py
src/: Opts.h  Rpc.cpp  Rpc.h  block_utils.c  block_utils.h  (+53 more)
tools/qt_blockchain_reader/: CMakeLists.txt  README.md
tools/qt_blockchain_reader/src/: MainWindow.cpp  MainWindow.h  RpcClient.cpp  RpcClient.h
(+19 files in other folders)
